[gd_scene load_steps=3 format=2]

[ext_resource path="res://FourierViewer.tscn" type="PackedScene" id=1]
[ext_resource path="res://Training/TrainerRoom.gd" type="Script" id=2]

[node name="TrainerRoom" type="HBoxContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Viewers" type="GridContainer" parent="."]
margin_left = 195.0
margin_top = 32.0
margin_right = 1725.0
margin_bottom = 1047.0
size_flags_horizontal = 6
size_flags_vertical = 6
custom_constants/vseparation = 15
custom_constants/hseparation = 15
columns = 3

[node name="FourierViewer1" parent="Viewers" instance=ExtResource( 1 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 500.0
margin_bottom = 500.0
rect_scale = Vector2( 1, 1 )

[node name="FourierViewer2" parent="Viewers" instance=ExtResource( 1 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 515.0
margin_right = 1015.0
margin_bottom = 500.0
rect_scale = Vector2( 1, 1 )

[node name="FourierViewer3" parent="Viewers" instance=ExtResource( 1 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 1030.0
margin_right = 1530.0
margin_bottom = 500.0
rect_scale = Vector2( 1, 1 )

[node name="FourierViewer4" parent="Viewers" instance=ExtResource( 1 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 515.0
margin_right = 500.0
margin_bottom = 1015.0
rect_scale = Vector2( 1, 1 )

[node name="FourierViewer5" parent="Viewers" instance=ExtResource( 1 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 515.0
margin_top = 515.0
margin_right = 1015.0
margin_bottom = 1015.0
rect_scale = Vector2( 1, 1 )

[node name="FourierViewer6" parent="Viewers" instance=ExtResource( 1 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 1030.0
margin_top = 515.0
margin_right = 1530.0
margin_bottom = 1015.0
rect_scale = Vector2( 1, 1 )

[node name="NextButton" type="Button" parent="."]
visible = false
margin_left = 1820.0
margin_top = 490.0
margin_right = 1920.0
margin_bottom = 590.0
rect_min_size = Vector2( 100, 100 )
size_flags_horizontal = 4
size_flags_vertical = 4
text = ">"

[connection signal="selected" from="Viewers/FourierViewer1" to="." method="_on_selected" binds= [ 0 ]]
[connection signal="selected" from="Viewers/FourierViewer2" to="." method="_on_selected" binds= [ 1 ]]
[connection signal="selected" from="Viewers/FourierViewer3" to="." method="_on_selected" binds= [ 2 ]]
[connection signal="selected" from="Viewers/FourierViewer4" to="." method="_on_selected" binds= [ 3 ]]
[connection signal="selected" from="Viewers/FourierViewer5" to="." method="_on_selected" binds= [ 4 ]]
[connection signal="selected" from="Viewers/FourierViewer6" to="." method="_on_selected" binds= [ 5 ]]
[connection signal="pressed" from="NextButton" to="." method="_on_NextButton_pressed"]
